--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,38 @@
-/* asdghjh */
+* {
+  margin: 0;
+  padding: 0;
+}
+main {
+  background-color: khaki;
+  height: 100vh;
+  width: 100vw;
+  /***/
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) 2fr repeat(2, 1fr);
+  grid-template-rows: 1fr 2fr 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.content {
+  grid-area: 2 / 2 / 3 / 5;
+  /***/
+  padding: 10px;
+  background-color: snow;
+  box-shadow: 5px 5px 20px;
+
+  border-radius: 25px;
+}
+
+.left {
+  grid-area: 2 / 2 / 3 / 3;
+  background-color: hotpink;
+}
+.midd {
+  grid-area: 2 / 3 / 3 / 4;
+  background-color: lawngreen;
+}
+.right {
+  grid-area: 2 / 4 / 3 / 5;
+  background-color: coral;
+}
