--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
+/* de rest van de style mogen julie doen heb er geen fucking zin meer in */
+
 * {
   margin: 0;
   padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 main {
   background-color: khaki;
@@ -25,22 +29,44 @@ main {
 
 .left {
   grid-area: 2 / 2 / 3 / 3;
-
-
+  /***/
   border-radius: 25px;
   padding: 10px;
 }
 .midd {
   grid-area: 2 / 3 / 3 / 4;
-
-
+  /***/
   border-radius: 25px;
   padding: 10px;
+  /***/
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 5fr 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 .right {
   grid-area: 2 / 4 / 3 / 5;
-
-
+  /***/
   border-radius: 25px;
   padding: 10px;
+}
+
+.vraagTitle {
+  grid-area: 1 / 1 / 2 / 3;
+  /***/
+  bottom: 0px;
+  border-bottom: solid black 2px;
+  padding: 20px;
+}
+.quizz {
+  grid-area: 2 / 2 / 3 / 4;
+  /***/
+}
+.submit {
+  grid-area: 3 / 2 / 4 / 3;
+  /***/
+  font-weight: bold;
+  border: groove 4px black;
+  margin: 10px;
 }
