--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+button:hover{
+  background-color: rgb(6, 255, 255);
+  transition: 250ms;
+  box-shadow: inset ;
+  border-radius: 10px ;
+
+}
 main {
   background-color: aqua;
   height: 100vh;
@@ -34,14 +41,14 @@ main {
   padding: 10px;
 }
 .midd {
-  grid-area: 2 / 3 / 3 / 4;
+  grid-area: 2 / 3 / 3 / 3;
   /***/
   border-radius: 25px;
-  padding: 10px;
+
   /***/
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr 5fr 1fr;
+  grid-template-rows: 2fr 3fr 2fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
@@ -57,9 +64,9 @@ main {
   grid-area: 1 / 2 / 2 / 3;
   /***/
   bottom: 0px;
+  margin-left: 20%;
+  margin-top: 5%;
   border-bottom: solid black 2px;
- 
-  
 }
 .quizz {
   grid-area: 2 / 2 / 3 / 4;
@@ -71,24 +78,27 @@ main {
   width: 50%;
   height: auto;
   float: left;
+  padding: 15%;
 
 }
 #q2{
   right: 100%;
   width: 50%;
   float: right;
-
+  padding: 15%;
 
 }
 #q3{
   width: 50%;
   height: auto;
    float: left;
-  
+   padding: 15%;
+
 }
 #q4{
   right: 100%;
   width: 50%;
-  float: right;
-  
+  float: right; 
+  padding: 15%;
+
 }
