--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-button:hover{
+button:hover {
   background-color: rgb(6, 255, 255);
   transition: 250ms;
-  box-shadow: inset ;
-  border-radius: 10px ;
-
+  box-shadow: inset;
+  border-radius: 10px;
 }
 main {
   background-color: aqua;
@@ -74,31 +73,34 @@ main {
   padding: 10%;
 }
 
-#q1{
-  width: 50%;
-  height: auto;
-  float: left;
-  padding: 15%;
-
+.kas {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
-#q2{
-  right: 100%;
-  width: 50%;
-  float: right;
+#q1 {
+  grid-area: 1 / 1 / 2 / 2;
+  width: 100%;
+  height: 100%;
   padding: 15%;
-
 }
-#q3{
-  width: 50%;
-  height: auto;
-   float: left;
-   padding: 15%;
-
-}
-#q4{
-  right: 100%;
-  width: 50%;
-  float: right; 
+#q2 {
+  grid-area: 1 / 2 / 2 / 3;
+  width: 100%;
+  height: 100%;
   padding: 15%;
-
+}
+#q3 {
+  grid-area: 2 / 1 / 3 / 2;
+  width: 100%;
+  height: 100%;
+  padding: 15%;
+}
+#q4 {
+  grid-area: 2 / 2 / 3 / 3;
+  width: 100%;
+  height: 100%;
+  padding: 15%;
 }
